sort.pancake.BasicPancake.scala.error
Compilation error:
BasicPancake:3: error: not found: value lastSorted
  lastSorted = getPancakeRadius();
  ^BasicPancake:8: error: not found: value lastSorted
    flip(lastSorted);
         ^BasicPancake:9: error: not found: value lastSorted
    lastSorted += 1;
    ^